2003-04-02  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl: macros splitted by 3 paragraphs are better handled.
	more isolation of formatting.
	better generation of index keys from commands, with more macros
	replaced by the right letter or symbol.
	better handling of @things{} in preformatted sections.
	preformatted sections handled with a new format, preformatted (similar
	with what is done for paragraphs). Some validation errors avoided.
	commands for tables are handled.
	index entries have the right file/id from their place.
	The files are omitted from hrefs when the href points to the same file.
	* Tests/*: formatting/imbrications.texi added. Sync with code.

2003-03-27  Patrice Dumas <dumas@centre-cired.fr>
	* texi2html.pl, texi2html.init: rewrite of the parsing of texi
	and of the handling of sectionning.
	pass0 is now pass_texi. It still only generates texinfo.
	pass_texi now also collects informations from sectionning commands
	index entries, printindex commands.
	pass1 through pass4 are now in just one pass, pass_text.
	between pass_texi and pass_text, the information is used to figure
	out the document and indices structure.
	pass_text reparses the texinfo generated by pass_texi and
	produces html. All the formatting is done in isolated subroutines
	such that it is easy to change the formatting witout bothering
	with the parsing.
	pass_text uses scan_line to process a line.
	A stack is used which holds opened macros and formats. Thus the 
	html is always closed and should be valid.
	The document structure seems right with this approach, unnumbered 
	sections are at the right level and indices don't break the document
	structure anymore.
	* Tests/*: more tests for the @macros. Other minor modifications.
	sync with new code.
2003-03-06  Patrice Dumas <dumas@centre-cired.fr>
	* T2h_i18n.pm: added  the licence
	* texi2html.pl, texi2html.init, check_texinfo.pl.in: check function
	put in check_texinfo.pl.in. T2H_EXPAND is now an array such that