@@ -154,7 +154,12 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <a name="NOD7"></a>
 <a name="SEC6"></a>
 <h2> 1.5 With dotless &iuml; </h2>
-<hr size="6">
+<p>ref to &ccedil; <a href="#SEC62">&ccedil;</a>.
+ </p> 
+<p>before footnote See <a href="#ANC1">footanchor</a>.
+</p><p><a name="DOCF1" href="#FOOT1">(1)</a>
+</p><p>after footnote See <a href="#ANC1">footanchor</a>.
+</p><hr size="6">
 <table cellpadding="1" cellspacing="1" border="0">
 <tr><td valign="middle" align="left">[<a href="#SEC6" title="Previous section in reading order"> &lt; </a>]</td>
 <td valign="middle" align="left">[<a href="#SEC8" title="Next section in reading order"> &gt; </a>]</td>
@@ -199,10 +204,9 @@ Send bugs and suggestions to <users@texi2html.cvshome.org>
 <a name="NOD10"></a>
 <a name="SEC9"></a>
 <h2> 1.8 &yuml; </h2>
-<p>ref to &ccedil; <a href="#SEC62">&ccedil;</a>.
- </p> <p>Ref to an anchor at the end of the doc 
-(see <a href="#ANC2">there is an o-&oacute; could there be an &icirc;</a>).
- </p> <p>Another ref to an anchor (see <a href="#ANC1">x-spot</a>).
+<p>Ref to an anchor at the end of the doc 
+(see <a href="#ANC3">there is an o-&oacute; could there be an &icirc;</a>).
+ </p> <p>Another ref to an anchor (see <a href="#ANC2">x-spot</a>).
  </p> <p>This is a ref to a node (see section <a href="#SEC27">&Uacute;</a>).
 </p><hr size="6">
 <table cellpadding="1" cellspacing="1" border="0">
@@ -1048,8 +1052,8 @@ Another one, with node only (see section <a href="#SEC2">&auml;</a>).
 <a name="NOD63"></a>
 <a name="SEC61"></a>
 <h1> 6. cedilla accent </h1>
-<p>This marks the <a name="ANC1"></a>spot.
-A second one with accented char <a name="ANC2"></a>.
+<p>This marks the <a name="ANC2"></a>spot.
+A second one with accented char <a name="ANC3"></a>.
  </p> <table border="0" cellspacing="0">
 
 <tr><td align="left" valign="top"><a href="#SEC62">6.1 &ccedil;</a></td><td>&nbsp;&nbsp;</td><td align="left" valign="top"></td></tr>
@@ -1432,6 +1436,17 @@ A second one with accented char <a name="ANC2"></a>.
 </p><p>	&iquest;
 </p><p>	&pound;
 </p><hr size="6">
+<a name="SEC_Foot"></a>
+<table cellpadding="1" cellspacing="1" border="0">
+<tr><td valign="middle" align="left">[<a href="#SEC_Top" title="Cover (top) of document">Top</a>]</td>
+<td valign="middle" align="left">[<a href="#SEC_Contents" title="Table of contents">Contents</a>]</td>
+<td valign="middle" align="left">[Index]</td>
+<td valign="middle" align="left">[<a href="#SEC_About" title="About (this page)"> ? </a>]</td>
+</tr></table>
+<h1>Footnotes</h1>
+<h3><a name="FOOT1" href="#DOCF1">(1)</a></h3>
+<p><a name="ANC1"></a>
+ </p> <hr size="1">
 <a name="SEC_Contents"></a>
 <table cellpadding="1" cellspacing="1" border="0">
 <tr><td valign="middle" align="left">[<a href="#SEC_Top" title="Cover (top) of document">Top</a>]</td>
